students/SmerdinaAnastasiya/task_02/src/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodplay-service
spec:
  selector:
    app: moodplay
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
